--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <title> Welcome to the Spidey Tracker </title>
-
-        <link rel="stylesheet" href="css/index.css">
-
-        <script type="text/javascript" src="index.js" defer></script>
-        <script type="text/javascript" src="js/models/spidey.js" defer></script>
-        <script type="text/javascript" src="js/models/comic.js" defer></script>
-        <script type="text/javascript" src="js/services/API.js" defer></script>
-    </head>
+  <head>
+     <title> A Gallery of Spideys </title>
+     <link rel="stylesheet" href="css/index.css">
+    <script type="text/javascript" src="js/models/comic.js"></script>
+    <script type="text/javascript" src="js/models/spidey.js"></script>
+    <script type="text/javascript" src="js/services/API.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+ </head>
 
     <body>
 
@@ -18,7 +16,7 @@
 
 
     
-        <div id="project-header" style="text-align:center">
+        <div id="gallery" style="text-align:center">
         </div>
 
 
@@ -82,11 +80,6 @@
               />
             </form>
 
-            <p style="text-align:center">
-                Add a new Spidey <button id="new-spidery-btn">Add New Car</button>
-            </p>
             </div>
-            <div id="gallery" style="text-align:center"></div>
-            <div id="file-cabinet" style="text-align:center"></div>
     </body>
 </html>
