--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 
 
-    
+      <h1>A Gallery of Spideys</h1>
+        <form id="form">
+          <input type="text" id="search" placeholder="Search by Name">
+          <input type="submit" value="Search">
+        </form>
         <div id="gallery" style="text-align:center">
         </div>
 
