--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <h1>A Gallery of Spideys</h1>
         <form id="form">
-          <input type="text" id="search" placeholder="Search by Name">
+          <input type="text" id="search" placeholder="Search by Birth Name or Alias">
           <input type="submit" value="Search">
         </form>
         <div id="gallery" style="text-align:center">
